--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,23 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%
+}
 
+.container-modal-terms {
+  border: 1px solid black;
+  margin: 5px 0px 5px 0px;
+  max-height: 300px;
+  overflow-y: scroll
+
+}
+
+.container-modal-terms ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 10px 0px 0px 5px;
+}
+.container-modal-terms li{
+  margin: 5px 0px 0px 5px;
 }
 
 .header h1 {
